--- a/hw3/index.html
+++ b/hw3/index.html
@@ -44,7 +44,7 @@
 <h2 align="middle">Helena Su and Aaron Zheng</h2>
 
 <!-- Add Website URL -->
-<h2 align="middle">Website URL: <a href="TODO">TODO</a></h2>
+<h2 align="middle">Website URL: <a href="https://cal-cs184-student.github.io/hw-webpages-sp24-helenawsu/hw3/index.html">https://cal-cs184-student.github.io/hw-webpages-sp24-helenawsu/hw3/index.html</a></h2>
 
 <div>
 
